panko/tests/testsuite/snapshots/testsuite__scope-panko__tests__cases__execute__enum__test_arithmetic_with_fixed_underlying_type.c.snap
---
source: panko/tests/testsuite/main.rs
info:
  program: panko
  args:
    - "--print=scopes"
    - "--stop-after=scopes"
    - panko/tests/cases/execute/enum/test_arithmetic_with_fixed_underlying_type.c
---
success: true
exit_code: 0
----- stdout -----
(translation-unit "panko/tests/cases/execute/enum/test_arithmetic_with_fixed_underlying_type.c"
   (declaration printf~0 `fn(∅: ptr<char const>, ...) -> int` ∅)
   (enum Long~1
      (enumerators `long`
         (enumerator A~2 `enum Long~1 complete`.0 ∅)
         (enumerator B~3 `enum Long~1 complete`.1 ∅)
         (enumerator C~4 `enum Long~1 complete`.2 ∅)))
   (enum Unsigned~5
      (enumerators `unsigned int`
         (enumerator D~6 `enum Unsigned~5 complete`.0 ∅)
         (enumerator E~7 `enum Unsigned~5 complete`.1 ∅)
         (enumerator F~8 `enum Unsigned~5 complete`.2 ∅)))
   (function-definition
      main~9 `fn() -> int`
      (compound-statement
         (expression
            (call (name printf~0 `fn(∅: ptr<char const>, ...) -> int`)
               (string "%ld %d\n")
               (subtract (enumerator B~3 `enum Long~1 complete`.1 ∅) (enumerator C~4 `enum Long~1 complete`.2 ∅))
               (less (subtract (enumerator B~3 `enum Long~1 complete`.1 ∅) (enumerator C~4 `enum Long~1 complete`.2 ∅)) 0)))
         (expression
            (call (name printf~0 `fn(∅: ptr<char const>, ...) -> int`)
               (string "0x%x %d\n")
               (subtract (enumerator E~7 `enum Unsigned~5 complete`.1 ∅) (enumerator F~8 `enum Unsigned~5 complete`.2 ∅))
               (less (subtract (enumerator E~7 `enum Unsigned~5 complete`.1 ∅) (enumerator F~8 `enum Unsigned~5 complete`.2 ∅)) 0))))))

----- stderr -----
