panko/tests/testsuite/snapshots/testsuite__scope-panko__tests__cases__execute__enum__test_completing_enum_in_declarator.c.snap
---
source: panko/tests/testsuite/main.rs
info:
  program: panko
  args:
    - "--print=scopes"
    - "--stop-after=scopes"
    - panko/tests/cases/execute/enum/test_completing_enum_in_declarator.c
---
success: true
exit_code: 0
----- stdout -----
(translation-unit "panko/tests/cases/execute/enum/test_completing_enum_in_declarator.c"
   (function-definition
      main~0 `fn() -> int`
      (compound-statement
         (declaration xs~7 `array<enum E~2 complete; (sizeof `enum E~2 complete`)>`
            (braced
               (enumerator A~3 `enum E~2 complete`.0 ∅)
               (enumerator B~4 `enum E~2 complete`.1 ∅)
               (enumerator C~5 `enum E~2 complete`.2 ∅)
               (enumerator D~6 `enum E~2 complete`.3 ∅)))
         (return (add (add (add (subscript (name xs~7 `array<enum E~2 complete; (sizeof `enum E~2 complete`)>`) 0) (subscript (name xs~7 `array<enum E~2 complete; (sizeof `enum E~2 complete`)>`) 1)) (subscript (name xs~7 `array<enum E~2 complete; (sizeof `enum E~2 complete`)>`) 2)) (subscript (name xs~7 `array<enum E~2 complete; (sizeof `enum E~2 complete`)>`) 3))))))

----- stderr -----
