panko/tests/testsuite/snapshots/testsuite__scope-panko__tests__cases__execute__enum__test_conversion_to_and_from_integral.c.snap
---
source: panko/tests/testsuite/main.rs
info:
  program: panko
  args:
    - "--print=scopes"
    - "--stop-after=scopes"
    - panko/tests/cases/execute/enum/test_conversion_to_and_from_integral.c
---
success: true
exit_code: 0
----- stdout -----
(translation-unit "panko/tests/cases/execute/enum/test_conversion_to_and_from_integral.c"
   (declaration printf~0 `fn(∅: ptr<char const>, ...) -> int` ∅)
   (enum E~1
      (enumerators
         (enumerator A~2 `enum E~1`.0 ∅)
         (enumerator B~3 `enum E~1`.1 ∅)
         (enumerator C~4 `enum E~1`.2 ∅)))
   (declaration x~5 `enum E~1 complete` ∅)
   (declaration y~6 `enum E~1 complete` 2)
   (declaration z~7 `int` (cast `enum E~1 complete` (enumerator B~3 `enum E~1 complete`.1 ∅)))
   (function-definition
      implicit_to_int~8 `fn() -> void`
      (compound-statement
         (declaration a~10 `int` (name y~6 `enum E~1 complete`))
         (declaration b~11 `int` (cast `enum E~1 complete` (enumerator B~3 `enum E~1 complete`.1 ∅)))
         (expression
            (call (name printf~0 `fn(∅: ptr<char const>, ...) -> int`)
               (string "%d %d\n")
               (name a~10 `int`)
               (name b~11 `int`)))))
   (function-definition
      implicit_from_int~12 `fn() -> void`
      (compound-statement
         (declaration a~14 `enum E~1 complete` (enumerator A~2 `enum E~1 complete`.0 ∅))
         (declaration b~15 `enum E~1 complete` 1)
         (expression
            (call (name printf~0 `fn(∅: ptr<char const>, ...) -> int`)
               (string "%d %d\n")
               (name a~14 `enum E~1 complete`)
               (name b~15 `enum E~1 complete`)))))
   (function-definition
      explicit_to_int~16 `fn() -> void`
      (compound-statement
         (declaration a~18 `int` (cast `int` (name x~5 `enum E~1 complete`)))
         (declaration b~19 `int` (cast `int` (name y~6 `enum E~1 complete`)))
         (expression
            (call (name printf~0 `fn(∅: ptr<char const>, ...) -> int`)
               (string "%d %d\n")
               (name a~18 `int`)
               (name b~19 `int`)))))
   (function-definition
      explicit_from_int~20 `fn() -> void`
      (compound-statement
         (declaration a~22 `enum E~1 complete` (cast `enum E~1 complete` (enumerator A~2 `enum E~1 complete`.0 ∅)))
         (declaration b~23 `enum E~1 complete` (cast `enum E~1 complete` 1))
         (declaration c~24 `enum E~1 complete` (cast `enum E~1 complete` (enumerator C~4 `enum E~1 complete`.2 ∅)))
         (expression
            (call (name printf~0 `fn(∅: ptr<char const>, ...) -> int`)
               (string "%d %d %d\n")
               (name a~22 `enum E~1 complete`)
               (name b~23 `enum E~1 complete`)
               (name c~24 `enum E~1 complete`)))))
   (function-definition
      main~25 `fn() -> int`
      (compound-statement
         (expression (call (name implicit_to_int~8 `fn() -> void`)))
         (expression (call (name implicit_from_int~12 `fn() -> void`)))
         (expression (call (name explicit_to_int~16 `fn() -> void`)))
         (expression (call (name explicit_from_int~20 `fn() -> void`)))
         (expression
            (call (name printf~0 `fn(∅: ptr<char const>, ...) -> int`)
               (string "%d %d %d\n")
               (name x~5 `enum E~1 complete`)
               (name y~6 `enum E~1 complete`)
               (name z~7 `int`))))))

----- stderr -----
