panko/tests/testsuite/snapshots/testsuite__scope-panko__tests__cases__execute__enum__test_enum_arithmetic.c.snap
---
source: panko/tests/testsuite/main.rs
info:
  program: panko
  args:
    - "--print=scopes"
    - "--stop-after=scopes"
    - panko/tests/cases/execute/enum/test_enum_arithmetic.c
---
success: true
exit_code: 0
----- stdout -----
(translation-unit "panko/tests/cases/execute/enum/test_enum_arithmetic.c"
   (declaration printf~0 `fn(∅: ptr<char const>, ...) -> int` ∅)
   (enum E~1
      (enumerators
         (enumerator A~2 `enum E~1`.0 ∅)
         (enumerator B~3 `enum E~1`.1 ∅)
         (enumerator C~4 `enum E~1`.2 ∅)
         (enumerator D~5 `enum E~1`.3 ∅)))
   (function-definition
      main~6 `fn() -> int`
      (compound-statement
         (declaration a~8 `enum E~1 complete` (enumerator A~2 `enum E~1 complete`.0 ∅))
         (declaration b~9 `enum E~1 complete` (enumerator B~3 `enum E~1 complete`.1 ∅))
         (declaration c~10 `enum E~1 complete` (cast `enum E~1 complete` (enumerator C~4 `enum E~1 complete`.2 ∅)))
         (expression
            (call (name printf~0 `fn(∅: ptr<char const>, ...) -> int`)
               (string "%d %d %d %d %d\n")
               (name a~8 `enum E~1 complete`)
               (add (name a~8 `enum E~1 complete`) (enumerator B~3 `enum E~1 complete`.1 ∅))
               (add (name b~9 `enum E~1 complete`) (name c~10 `enum E~1 complete`))
               (multiply (enumerator D~5 `enum E~1 complete`.3 ∅) (name c~10 `enum E~1 complete`))
               (left-shift (name b~9 `enum E~1 complete`) (name c~10 `enum E~1 complete`)))))))

----- stderr -----
