panko/tests/testsuite/snapshots/testsuite__scope-panko__tests__cases__execute__enum__test_enum_bitfields.c.snap
---
source: panko/tests/testsuite/main.rs
info:
  program: panko
  args:
    - "--print=scopes"
    - "--stop-after=scopes"
    - panko/tests/cases/execute/enum/test_enum_bitfields.c
---
success: true
exit_code: 0
----- stdout -----
(translation-unit "panko/tests/cases/execute/enum/test_enum_bitfields.c"
   (enum E~0
      (enumerators
         (enumerator A~1 `enum E~0`.0 ∅)
         (enumerator B~2 `enum E~0`.1 ∅)
         (enumerator C~3 `enum E~0`.2 ∅)))
   (struct T~4
      (member x (bitfield-width 2) `enum E~0 complete`)
      (member ∅ (bitfield-width 0) `enum E~0 complete`)
      (member y (bitfield-width 2) `enum E~0 complete`))
   (function-definition
      main~5 `fn() -> int`
      (compound-statement
         (declaration t~7 `struct T~4 complete`
            (braced
               (designation ((member x)) (enumerator B~2 `enum E~0 complete`.1 ∅))
               (designation ((member y)) (enumerator C~3 `enum E~0 complete`.2 ∅))))
         (return
            (add
               (dot x
                  (name t~7 `struct T~4 complete`))
               (dot y
                  (name t~7 `struct T~4 complete`)))))))

----- stderr -----
